[gd_scene load_steps=23 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/img/move_right_01.tres" type="Texture" id=2]
[ext_resource path="res://player/img/idle.tres" type="Texture" id=3]
[ext_resource path="res://player/img/move_right_03.tres" type="Texture" id=4]
[ext_resource path="res://player/img/move_right_00.tres" type="Texture" id=5]
[ext_resource path="res://player/img/move_right_02.tres" type="Texture" id=6]
[ext_resource path="res://inventory/inventory.tscn" type="PackedScene" id=7]
[ext_resource path="res://player/img/down_00.tres" type="Texture" id=8]
[ext_resource path="res://player/img/up_00.tres" type="Texture" id=9]
[ext_resource path="res://player/img/up_03.tres" type="Texture" id=10]
[ext_resource path="res://player/img/up_02.tres" type="Texture" id=11]
[ext_resource path="res://player/img/up_01.tres" type="Texture" id=12]
[ext_resource path="res://player/img/down_02.tres" type="Texture" id=13]
[ext_resource path="res://player/img/down_01.tres" type="Texture" id=14]
[ext_resource path="res://player/img/down_03.tres" type="Texture" id=15]

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.0
height = 0.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 15 ) ],
"loop": true,
"name": "move_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "move_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "move_up",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0196078, 0.568627, 0.568627, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.72549, 0.745098, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.243137, 0.243137, 0.243137, 1 )

[sub_resource type="CircleShape2D" id=5]
radius = 25.02

[node name="player" type="KinematicBody2D" groups=["player"]]
collision_mask = 0
script = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 6 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
unique_name_in_owner = true
position = Vector2( 0, -6 )
frames = SubResource( 2 )
animation = "move_down"
frame = 2
playing = true

[node name="inventory" parent="." groups=["player_inventory"] instance=ExtResource( 7 )]
unique_name_in_owner = true

[node name="camera_2d" type="Camera2D" parent="."]
current = true

[node name="5_z_index" type="Node2D" parent="."]
z_index = 5

[node name="conversation" type="Label" parent="5_z_index"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -29.0
margin_right = 20.0
margin_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
align = 1
valign = 1

[node name="energy_bar" type="ProgressBar" parent="5_z_index"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = 6.0
margin_right = 25.0
margin_bottom = 11.0
mouse_filter = 2
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 50.0
percent_visible = false

[node name="oxygen_bar" type="ProgressBar" parent="5_z_index"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = 13.0
margin_right = 25.0
margin_bottom = 18.0
mouse_filter = 2
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
value = 50.0
percent_visible = false

[node name="player_area_layer" type="Area2D" parent="." groups=["player"]]
collision_layer = 2
collision_mask = 0

[node name="collision_shape_2d" type="CollisionShape2D" parent="player_area_layer"]
shape = SubResource( 5 )

[node name="oxygen_timer" type="Timer" parent="."]

[connection signal="timeout" from="oxygen_timer" to="." method="_on_oxygen_timer_timeout"]
